# ncurses-game-engine

./: CMakeLists.txt  LICENSE  NcursesGameEngine.cpp  NcursesGameEngine.h  README.md  main.cpp
flappy-bird/: FlappyBird.cpp  FlappyBird.h
maze-generator/: MazeGenerator.cpp  MazeGenerator.h
simple-keyboard-example/: SimpleKeyboardExample.cpp  SimpleKeyboardExample.h
simple-mouse-example/: SimpleMouseExample.cpp  SimpleMouseExample.h
snake/: Snake.cpp  Snake.h
